kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9797"
      labels:
        app: ui
    spec:
      containers:
      - name: otto-ui
        image: ghcr.io/danielmunro/otto-ui:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
            name: http
            protocol: TCP
        resources:
          limits:
            cpu: 2000m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
      imagePullSecrets:
      - name: dockerconfigjson-github-com
