kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
    - name: http
      port: 3000
      targetPort: 3000
